--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "sass": "^1.54.7",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-dotenv": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
